apps/linkding/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: linkding
  name: linkding
  namespace: linkding
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 9090 
  selector:
    app: linkding
status:
  loadBalancer: {}
