apps/linkding/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: linkding 
  namespace: linkding
spec:
  parentRefs:
  - name: gateway
    namespace: nginx
  hostnames:
  - "linkding.homelab.net"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: linkding
      port: 80
